--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bluebird": "^2.9.24",
     "body-parser": "^1.12.2",
     "bookshelf": "^0.7.9",
+    "chai": "^2.2.0",
     "cookie-parser": "^1.3.4",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
