--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sentimental",
   "version": "0.0.0",
   "dependencies": {
+    "grunt": "^0.4.5",
     "bluebird": "^2.9.24",
     "body-parser": "^1.12.2",
     "bookshelf": "^0.7.9",
@@ -23,11 +24,8 @@
     "mysql": "^2.6.1",
     "path": "^0.11.14",
     "ramda": "^0.13.0",
-    "serve-favicon": "^2.2.0"
-  },
-  "devDependencies": {
+    "serve-favicon": "^2.2.0",
     "connect-livereload": "^0.4.0",
-    "grunt": "^0.4.5",
     "grunt-bower-requirejs": "^1.1.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
@@ -48,6 +46,9 @@
     "jshint-stylish": "^1.0.0",
     "load-grunt-tasks": "^0.6.0",
     "time-grunt": "^1.0.0"
+  },
+  "devDependencies": {
+  
   },
   "engines": {
     "node": ">=0.10.0"
