--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "dependencies": {
     "grunt": "^0.4.5",
+    "express": "^4.12.3"
+  },
+  "devDependencies": {
+    "grunt-bower-requirejs": "^1.1.0",
     "bluebird": "^2.9.24",
     "body-parser": "^1.12.2",
     "bookshelf": "^0.7.9",
     "chai": "^2.2.0",
     "cookie-parser": "^1.3.4",
     "ejs": "^2.3.1",
-    "express": "^4.12.3",
     "express-handlebars": "^2.0.0",
     "express3-handlebars": "^0.5.2",
     "grunt-contrib-copy": "^0.8.0",
@@ -26,12 +29,12 @@
     "ramda": "^0.13.0",
     "serve-favicon": "^2.2.0",
     "connect-livereload": "^0.4.0",
-    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-jst": "^0.6.0",
     "grunt-contrib-uglify": "^0.6.0",
@@ -41,12 +44,10 @@
     "grunt-requirejs": "^0.4.2",
     "grunt-rev": "^0.1.0",
     "grunt-usemin": "^2.4.0",
-    "grunt-bower-requirejs": "^1.1.0",
     "jshint-stylish": "^1.0.0",
     "load-grunt-tasks": "^0.6.0",
-    "time-grunt": "^1.0.0"
-  },
-  "devDependencies": {
+    "time-grunt": "^1.0.0",
+    "grunt-contrib-clean": "^0.6.0"
   
   },
   "engines": {
