--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "sentimental",
   "version": "0.0.0",
   "dependencies": {
-    "grunt": "^0.4.5",
-    "express": "^4.12.3"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "express": "^4.12.3",
     "grunt-bower-requirejs": "^1.1.0",
     "bluebird": "^2.9.24",
     "body-parser": "^1.12.2",
